--- a/app/src/main/res/layout/faleconosco.xml
+++ b/app/src/main/res/layout/faleconosco.xml
@@ -1,30 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:background="#11161D">
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="24dp"
-    android:background="#11161d">  <!-- Cor de fundo azul escuro -->
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="24dp"
+        android:background="#11161d" >
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Charity Connect"
+        android:fontFamily="@font/lexend_semibold"
         android:textAlignment="center"
-        android:textSize="50sp"
+        android:textSize="100px"
         android:textColor="#FFFFFF"
-        android:paddingBottom="8dp"/>
+        android:paddingBottom="100px"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/lexend_semibold"
+        android:paddingBottom="24dp"
         android:text="Formulário para Contato"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display4"
         android:textColor="#FFFFFF"
-        android:textSize="150px"
-        android:paddingBottom="24dp" />
+        android:textSize="80px" />
 
     <EditText
         android:layout_width="match_parent"
@@ -85,7 +92,7 @@
         android:backgroundTint="#707bff"
         android:inputType="phone"
         android:textSize="80px"
-        android:paddingBottom="24dp"/>
+        android:paddingBottom="16dp"/>
 
     <Button
         android:layout_width="match_parent"
@@ -93,8 +100,9 @@
         android:text="Enviar"
         android:textColor="#FFFFFF"
         android:background="#707bff"
-        android:textSize="95px"
+        android:textSize="80px"
 
         android:paddingTop="12dp"
         android:paddingBottom="12dp"/>
 </LinearLayout>
+</ScrollView>
