--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,7 +19,8 @@
         android:id="@+id/imageminha1"
         android:layout_width="137dp"
         android:layout_height="107dp"
-        android:layout_marginStart="140dp"
+        android:layout_marginStart="160dp"
+        android:textAlignment="center"
         android:layout_marginTop="20dp"
         android:src="@drawable/shortlogobranca" />
 
@@ -27,10 +28,11 @@
     <TextView
         android:id="@+id/textmeu1"
         android:layout_width="wrap_content"
-        android:layout_height="108dp"
-        android:layout_marginStart="90dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="130dp"
         android:layout_marginTop="120dp"
         android:text="Charity Connect"
+        android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="@color/white"
         android:textStyle="bold"
@@ -60,8 +62,8 @@
 
     <ImageView
         android:id="@+id/imagemeu2"
-        android:layout_width="427dp"
-        android:layout_height="300dp"
+        android:layout_width="wrap_content"
+        android:layout_height="290dp"
         android:layout_marginVertical="900dp"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="0dp"
@@ -72,10 +74,10 @@
         android:id="@+id/faleconosco"
         android:layout_width="240dp"
         android:layout_height="60dp"
-        android:layout_marginLeft="90dp"
+        android:layout_marginLeft="105dp"
         android:layout_marginTop="1790dp"
         android:text="Fale Conosco"
-        android:textAlignment="textEnd"
+        android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textStyle="bold" />
 
@@ -98,8 +100,8 @@
     <TextView
         android:id="@+id/ajuda"
         android:layout_width="wrap_content"
-        android:layout_height="119dp"
-        android:layout_marginLeft="90dp"
+        android:layout_height="39dp"
+        android:layout_marginLeft="120dp"
         android:layout_marginTop="1730dp"
         android:layout_marginRight="15dp"
         android:padding="5dp"
@@ -115,6 +117,7 @@
         android:layout_width="100dp"
         android:layout_height="80dp"
         android:layout_marginLeft="160dp"
+        android:textAlignment="center"
         android:layout_marginTop="1630dp"
         android:src="@drawable/group_4" />
 
