--- a/app/src/main/res/layout/fragment_catalogo.xml
+++ b/app/src/main/res/layout/fragment_catalogo.xml
@@ -37,6 +37,8 @@
         tools:src="@drawable/shortlogobranca" />
 
     <!-- Barra de pesquisa -->
+
+    <!-- CardView com itens divididos lado a lado -->
     <SearchView
         android:id="@+id/search_view"
         android:layout_width="0dp"
@@ -47,10 +49,10 @@
         app:circularflow_defaultRadius="20dp"
         app:circularflow_radiusInDP="20dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonLogo" />
 
-    <!-- CardView com itens divididos lado a lado -->
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
@@ -243,6 +245,18 @@
 
 
     </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/bancoTeste"
+        android:layout_width="wrap_content"
+        android:layout_height="19dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.46"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.32999998" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
