--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -29,9 +29,10 @@
         android:id="@+id/textmeu1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="130dp"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="120dp"
         android:text="Charity Connect"
+        android:textSize="110px"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="@color/white"
@@ -40,16 +41,16 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="128dp"
+        android:layout_height="300dp"
         android:layout_marginTop="1300dp"
         app:cardBackgroundColor="#161b22">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
-            android:layout_height="119dp"
+            android:layout_height="331dp"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="-50dp"
             android:layout_marginRight="15dp"
             android:padding="5dp"
             android:shadowRadius="50"
@@ -57,6 +58,7 @@
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="#FFFFFF"
+            android:textSize="100px"
             android:textStyle="bold" />
     </androidx.cardview.widget.CardView>
 
