--- a/app/src/main/res/layout/faleconosco.xml
+++ b/app/src/main/res/layout/faleconosco.xml
@@ -23,6 +23,7 @@
 
 
     <TextView
+        android:id="@+id/tit1"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:fontFamily="@font/lexend_semibold"
@@ -34,6 +35,7 @@
         android:textSize="65px" />
 
     <TextView
+        android:id="@+id/tit2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/lexend_semibold"
@@ -46,6 +48,7 @@
         android:textSize="55px" />
 
     <EditText
+        android:id="@+id/motivo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Digite o Motivo do Contato"
@@ -56,6 +59,7 @@
         android:paddingBottom="16dp"/>
 
     <EditText
+        android:id="@+id/pergunta"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Digite sua pergunta"
@@ -66,6 +70,7 @@
         android:paddingBottom="16dp"/>
 
     <EditText
+        android:id="@+id/nome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Digite seu nome"
@@ -76,6 +81,7 @@
         android:paddingBottom="16dp"/>
 
     <EditText
+        android:id="@+id/sobrenome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Digite seu sobrenome"
@@ -86,6 +92,7 @@
         android:paddingBottom="16dp"/>
 
     <EditText
+        android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Digite seu email"
@@ -96,6 +103,7 @@
         android:paddingBottom="16dp"/>
 
     <EditText
+        android:id="@+id/celular"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Digite seu celular"
@@ -107,6 +115,7 @@
         android:paddingBottom="16dp"/>
 
     <Button
+        android:id="@+id/enviar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Enviar"
