--- a/app/src/main/res/layout/perfil_ong.xml
+++ b/app/src/main/res/layout/perfil_ong.xml
@@ -52,13 +52,13 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="16dp"
+            android:fontFamily="@font/lexend_light"
             android:text="Sorrisos do Amanhã é uma ONG que arrecada fundos para apoiar crianças e jovens em vulnerabilidade. Nossa missão é proporcionar acesso à educação e saúde, transformando vidas e construindo um futuro melhor. Junte-se a nós e faça a diferença!"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
-            android:fontFamily="@font/lexend_light"
-            android:textSize="14sp"
-            android:layout_marginTop="12dp"
-            android:layout_marginBottom="16dp" />
+            android:textSize="14sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -77,7 +77,7 @@
                     android:layout_height="wrap_content"
                     android:text="NOME DA \nORGANIZAÇÃO:"
                     android:textColor="#707bff"
-                    android:fontFamily="@font/lexend_light"
+                    android:fontFamily="@font/lexend_semibold"
                     android:textSize="14sp" />
 
                 <TextView
@@ -85,7 +85,7 @@
                     android:layout_height="wrap_content"
                     android:text=" Sorrisos do Amanhã"
                     android:textColor="#FFFFFF"
-                    android:layout_marginLeft="15sp"
+                    android:layout_marginLeft="28sp"
                     android:layout_marginTop="10sp"
                     android:fontFamily="@font/lexend_light"
                     android:textSize="14sp" />
@@ -103,7 +103,7 @@
                     android:layout_height="wrap_content"
                     android:text="NOME DO \nREPRESENTANTE:"
                     android:textColor="#707bff"
-                    android:fontFamily="@font/lexend_light"
+                    android:fontFamily="@font/lexend_semibold"
                     android:textSize="14sp" />
 
                 <TextView
@@ -129,7 +129,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="EMAIL DA \nORGANIZAÇÃO:"
-                    android:fontFamily="@font/lexend_light"
+                    android:fontFamily="@font/lexend_semibold"
                     android:textColor="#707bff"
                     android:textSize="14sp" />
 
@@ -138,7 +138,7 @@
                     android:layout_height="wrap_content"
                     android:text=" emostalook@gmail.com"
                     android:textColor="#FFFFFF"
-                    android:layout_marginLeft="15sp"
+                    android:layout_marginLeft="29sp"
                     android:layout_marginTop="10sp"
                     android:fontFamily="@font/lexend_light"
                     android:textSize="14sp" />
@@ -156,7 +156,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="NÚMERO DE \nCELULAR:"
-                    android:fontFamily="@font/lexend_light"
+                    android:fontFamily="@font/lexend_semibold"
                     android:textColor="#707bff"
                     android:textSize="14sp" />
 
@@ -165,10 +165,86 @@
                     android:layout_height="wrap_content"
                     android:text=" (xx)xxxxx-xxxx"
                     android:textColor="#FFFFFF"
-                    android:layout_marginLeft="15sp"
+                    android:layout_marginLeft="50sp"
                     android:layout_marginTop="10sp"
                     android:fontFamily="@font/lexend_light"
+                    android:textSize="14sp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="10sp"
+                android:layout_marginTop="8dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="CEP:"
+                    android:fontFamily="@font/lexend_semibold"
+                    android:textColor="#707bff"
                     android:textSize="14sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="06449-000"
+                    android:textColor="#FFFFFF"
+                    android:layout_marginLeft="115sp"
+                    android:fontFamily="@font/lexend_light"
+                    android:textSize="14sp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="10sp"
+                android:layout_marginTop="8dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="CNPJ:"
+                    android:fontFamily="@font/lexend_semibold"
+                    android:textColor="#707bff"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0644900051545"
+                    android:textColor="#FFFFFF"
+                    android:layout_marginLeft="105sp"
+                    android:fontFamily="@font/lexend_light"
+                    android:textSize="14sp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="10sp"
+                android:layout_marginTop="8dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="UF:"
+                    android:fontFamily="@font/lexend_semibold"
+                    android:textColor="#707bff"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="São Paulo - SP"
+                    android:textColor="#FFFFFF"
+                    android:layout_marginLeft="125sp"
+                    android:fontFamily="@font/lexend_light"
+                    android:textSize="14sp"
+                    android:layout_marginBottom="70sp"/>
             </LinearLayout>
 
         </LinearLayout>
