--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,7 +19,7 @@
         android:id="@+id/imageminha1"
         android:layout_width="137dp"
         android:layout_height="107dp"
-        android:layout_marginStart="160dp"
+        android:layout_marginStart="140dp"
         android:textAlignment="center"
         android:layout_marginTop="20dp"
         android:src="@drawable/shortlogobranca" />
@@ -107,26 +107,37 @@
         android:id="@+id/teste"
         android:layout_width="240dp"
         android:layout_height="60dp"
-        android:layout_marginLeft="105dp"
+        android:layout_marginLeft="85dp"
         android:layout_marginTop="1790dp"
-        android:text="Fale Conosco"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textStyle="bold" />
+
+
+    <TextView
+        android:id="@+id/faleconosco"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="1800dp"
+        android:text="Fale Conosco"
+        android:textColor="#FFFFFF"
+        android:textSize="70px"
         android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/bate_papo"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="110dp"
+        android:layout_marginLeft="94dp"
         android:layout_marginTop="1795dp"
         android:src="@drawable/bate_papo__1__1" />
 
     <ImageView
         android:id="@+id/interrogacao"
-        android:layout_width="40dp"
-        android:layout_height="23dp"
-        android:layout_marginLeft="115dp"
+        android:layout_width="37dp"
+        android:layout_height="18dp"
+        android:layout_marginLeft="100dp"
         android:layout_marginTop="1807dp"
         android:src="@drawable/resource__" />
 
@@ -134,13 +145,13 @@
         android:id="@+id/ajuda"
         android:layout_width="wrap_content"
         android:layout_height="39dp"
-        android:layout_marginLeft="120dp"
+        android:layout_marginLeft="88dp"
+        android:textAlignment="center"
         android:layout_marginTop="1730dp"
         android:layout_marginRight="15dp"
         android:padding="5dp"
         android:shadowRadius="50"
         android:text="Precisa de mais ajuda?"
-        android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#FFFFFF"
         android:textStyle="bold" />
